# BasicRust

intro_cargo/: Cargo.toml  Readme.md
intro_cargo/src/: main.rs
intro_cargo2/: Cargo.toml
rust_crud/: .env.example  Cargo.toml
rust_crud/.kiro/specs/order-crud-api/: design.md  requirements.md  tasks.md
rust_crud/src/: config.rs  database.rs  errors.rs  handlers.rs  main.rs  models.rs  repository.rs  service.rs  status_reporter.rs
