[package]
name = "order-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# HTTP client for status reporting
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal numbers
rust_decimal = { version = "1.32", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1.2"